--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Backend (NodeJS) - Lesson Notes</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Kavinoq Academy | Lesson Notes</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -17,11 +21,12 @@
 
         /* Header Styles */
         header {
-            background: #3498db; /* A vibrant blue */
+            background: #3498db;
+            /* A vibrant blue */
             color: #fff;
             padding: 2rem 0;
             text-align: center;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         header h1 {
@@ -40,7 +45,7 @@
         nav {
             background: #fff;
             padding: 1rem 2rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
             position: sticky;
             top: 0;
             z-index: 100;
@@ -52,7 +57,8 @@
             margin: 0;
             display: flex;
             justify-content: flex-start;
-            overflow-x: auto; /* Enable horizontal scrolling */
+            overflow-x: auto;
+            /* Enable horizontal scrolling */
         }
 
         nav li {
@@ -67,7 +73,8 @@
             padding: 0.5rem 1rem;
             border-radius: 5px;
             display: block;
-            white-space: nowrap; /* Prevent text from wrapping */
+            white-space: nowrap;
+            /* Prevent text from wrapping */
         }
 
         nav a:hover {
@@ -87,7 +94,7 @@
             margin-bottom: 2rem;
             background-color: #fff;
             padding: 1.5rem;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
             border-radius: 5px;
         }
 
@@ -118,7 +125,7 @@
             text-decoration: none;
             border-left: 5px solid #3498db;
             transition: background-color 0.3s ease, border-left-color 0.3s ease;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
         }
 
@@ -142,9 +149,10 @@
         }
     </style>
 </head>
+
 <body>
     <header>
-        <h1>Backend (NodeJS) - Lesson Notes</h1>
+        <h1>Kavinoq Academy Backend (NestJS) - Lesson Notes</h1>
         <p>Your comprehensive resource for Backend (NodeJS) lessons.</p>
     </header>
 
@@ -152,28 +160,6 @@
         <ul>
             <li><a href="#week1">Week 1</a></li>
             <li><a href="#week2">Week 2</a></li>
-            <li><a href="#week3">Week 3</a></li>
-            <li><a href="#week4">Week 4</a></li>
-            <li><a href="#week5">Week 5</a></li>
-            <li><a href="#week6">Week 6</a></li>
-            <li><a href="#week7">Week 7</a></li>
-            <li><a href="#week8">Week 8</a></li>
-            <li><a href="#week9">Week 9</a></li>
-            <li><a href="#week10">Week 10</a></li>
-            <li><a href="#week11">Week 11</a></li>
-            <li><a href="#week12">Week 12</a></li>
-            <li><a href="#week13">Week 13</a></li>
-            <li><a href="#week14">Week 14</a></li>
-            <li><a href="#week15">Week 15</a></li>
-            <li><a href="#week16">Week 16</a></li>
-            <li><a href="#week17">Week 17</a></li>
-            <li><a href="#week18">Week 18</a></li>
-            <li><a href="#week19">Week 19</a></li>
-            <li><a href="#week20">Week 20</a></li>
-            <li><a href="#week21">Week 21</a></li>
-            <li><a href="#week22">Week 22</a></li>
-            <li><a href="#week23">Week 23</a></li>
-            <li><a href="#week24">Week 24</a></li>
         </ul>
     </nav>
 
@@ -193,187 +179,11 @@
                 <li><a href="week2/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
             </ul>
         </section>
-
-        <section id="week3">
-            <h2>Week 3</h2>
-            <ul class="resource-list">
-                <li><a href="week3/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week3/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-        <section id="week4">
-            <h2>Week 4</h2>
-            <ul class="resource-list">
-                <li><a href="week4/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week4/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week5">
-            <h2>Week 5</h2>
-            <ul class="resource-list">
-                <li><a href="week5/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week5/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week6">
-            <h2>Week 6</h2>
-            <ul class="resource-list">
-                <li><a href="week6/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week6/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week7">
-            <h2>Week 7</h2>
-            <ul class="resource-list">
-                <li><a href="week7/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week7/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week8">
-            <h2>Week 8</h2>
-            <ul class="resource-list">
-                <li><a href="week8/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week8/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week9">
-            <h2>Week 9</h2>
-            <ul class="resource-list">
-                <li><a href="week9/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week9/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week10">
-            <h2>Week 10</h2>
-            <ul class="resource-list">
-                <li><a href="week10/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week10/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week11">
-            <h2>Week 11</h2>
-            <ul class="resource-list">
-                <li><a href="week11/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week11/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week12">
-            <h2>Week 12</h2>
-            <ul class="resource-list">
-                <li><a href="week12/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week12/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week13">
-            <h2>Week 13</h2>
-            <ul class="resource-list">
-                <li><a href="week13/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week13/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week14">
-            <h2>Week 14</h2>
-            <ul class="resource-list">
-                <li><a href="week14/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week14/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week15">
-            <h2>Week 15</h2>
-            <ul class="resource-list">
-                <li><a href="week15/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week15/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week16">
-            <h2>Week 16</h2>
-            <ul class="resource-list">
-                <li><a href="week16/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week16/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week17">
-            <h2>Week 17</h2>
-            <ul class="resource-list">
-                <li><a href="week17/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week17/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week18">
-            <h2>Week 18</h2>
-            <ul class="resource-list">
-                <li><a href="week18/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week18/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week19">
-            <h2>Week 19</h2>
-            <ul class="resource-list">
-                <li><a href="week19/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week19/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week20">
-            <h2>Week 20</h2>
-            <ul class="resource-list">
-                <li><a href="week20/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week20/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week21">
-            <h2>Week 21</h2>
-            <ul class="resource-list">
-                <li><a href="week21/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week21/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week22">
-            <h2>Week 22</h2>
-            <ul class="resource-list">
-                <li><a href="week22/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week22/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week23">
-            <h2>Week 23</h2>
-            <ul class="resource-list">
-                <li><a href="week23/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week23/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-
-         <section id="week24">
-            <h2>Week 24</h2>
-            <ul class="resource-list">
-                <li><a href="week24/notes.pdf"><i class="fas fa-file-pdf"></i> Lesson Notes</a></li>
-                <li><a href="week24/slides.html"><i class="fas fa-slideshare"></i> Slides</a></li>
-            </ul>
-        </section>
-        <!-- Add more weeks as needed -->
     </div>
 
     <footer>
-        <p>&copy; 2024 Backend (NodeJS) - Lesson Notes</p>
+        <p>&copy; 2025 Kavinoq Academy Backend (NestJS) - Lesson Notes</p>
     </footer>
 </body>
+
 </html>
