--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <li><a href="#week1">Week 1</a></li>
         <li><a href="#week2">Week 2</a></li>
         <li><a href="#week3">Week 3</a></li>
+        <li><a href="#week4">Week 4</a></li>
       </ul>
     </nav>
 
@@ -217,6 +218,27 @@
           </li>
         </ul>
       </section>
+
+      <section id="week4">
+        <h2>Week 4</h2>
+        <ul class="resource-list">
+          <li>
+            <a href="week4/notes.pdf"
+              ><i class="fas fa-file-pdf"></i> Lesson Notes</a
+            >
+          </li>
+          <li>
+            <a href="week4/interactive-guide.html"
+              ><i class="fas fa-slideshare"></i> Interactive Guide</a
+            >
+          </li>
+          <li>
+            <a href="week4/slides.html"
+              ><i class="fas fa-slideshare"></i> Slides</a
+            >
+          </li>
+        </ul>
+      </section>
     </div>
 
     <footer>
@@ -224,4 +246,3 @@
     </footer>
   </body>
 </html>
-
